java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testAddCastHint7-hints.pass
[AddCastFix:...o:String]
FIX_ChangeMethodReturnType Object
